# gst-gui

./: .gitignore  CMakeLists.txt  Doxyfile  conanfile.txt  run.bat  run.sh
src/: FileManager.cpp  FileManager.h  Main.cpp  OpenGLShader.cpp  OpenGLShader.h  gst.cpp  gst.h
src/bindings/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
